# lanchat

./: index.html  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  net.rs
src/components/: Message.tsx
